--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "require": {
         "php": "^5.5.9|^7.0",
 
-        "stof/doctrine-extensions-bundle": "~1.1",
         "sylius/archetype": "0.16.*",
         "sylius/attribute-bundle": "0.16.*",
         "sylius/resource-bundle": "0.16.*",
@@ -32,7 +31,8 @@
     "require-dev": {
         "phpspec/phpspec": "^2.4",
         "symfony/form": "^2.7",
-        "symfony/validator": "^2.7"
+        "symfony/validator": "^2.7",
+        "doctrine/orm": "^2.4.8,<2.5",
     },
     "config": {
         "bin-dir": "bin"
