[Composer] Added prefer-stable: true

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "psr-4": { "Sylius\\Bundle\\ArchetypeBundle\\spec\\": "spec/" }
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "0.18-dev"
