--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     "require": {
         "php": "^5.5.9|^7.0",
 
-        "sylius/archetype": "0.18.*",
-        "sylius/attribute-bundle": "0.18.*",
-        "sylius/resource-bundle": "0.18.*",
-        "sylius/variation-bundle": "0.18.*",
+        "sylius/archetype": "^0.18",
+        "sylius/attribute-bundle": "^0.18",
+        "sylius/resource-bundle": "^0.18",
+        "sylius/variation-bundle": "^0.18",
         "symfony/framework-bundle": "^2.7.7"
     },
     "require-dev": {
